tests/diagnostics/statements/control_flow/no_narrowing_after_if/expect.txt
# exit: 1
input/main.coppice:5:12: error: return type mismatch: expected int64, got int64 | nil
      return value
             ^
